looking at colours to aid sight impaired users

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
   </head>
   <body class="contact-page">
     <div class="page-wrapper">
-     
       <header class="navbar">
         <div class="container flex">
           <h1>☕ The Cowshed Cafe</h1>
@@ -28,9 +27,9 @@
 
       <main>
         <h2>Contact Us</h2>
-        <p>
+        <article>
           Please do not hesitate to reach out with any questions you may have!
-        </p>
+        </article>
         <address>
           Shaun @ The Cowshed Cafe<br />
           The Groovy Street<br />
@@ -41,7 +40,6 @@
         </address>
       </main>
 
-      
       <footer>
         <p>Copyright 2025 The Cowshed Cafe. All rights reserved.</p>
       </footer>
